modules/gdscript/tests/scripts/parser/errors/assignment_in_if.gd
func test():
	# Error here.
	if foo = 25:
		print(foo)
